--- a/projects/xiaoyan/assignment-1/Calendar/pom.xml
+++ b/projects/xiaoyan/assignment-1/Calendar/pom.xml
@@ -24,5 +24,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>javancss-maven-plugin</artifactId>
+        <version>2.1</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
+
 </project>
 
